# majestic-rp-linux

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  MAJESTIC-PROTON-PATCH-README.md  QUICKFIX.md  README.md  ROCKSTAR_LAUNCHER_FIX.md  SECURITY.md  install-and-run-majestic-proton.sh  majestic-proton-js-patcher.js  majestic-proton.conf  majestic-runner.conf  package.json  pyproject.toml  uinstall-majescic.sh
.github/workflows/: build-deb.yml  build-rpm.yml
examples/: majestic-runner.example.conf
helpers/win-blocker/: block_win.c
majestic_linux/: __init__.py
majestic_linux/app/: actions.py  cli.py  commands.py  context.py  diagnostics.py  radio.py
majestic_linux/core/: __init__.py  config.py  config_file.py  config_parser.py  config_template.py  errors.py  keys.py  logger.py
majestic_linux/detection/: __init__.py  async_paths.py  heroic.py  paths.py  platform.py
majestic_linux/discord/: __init__.py  bridge.py
majestic_linux/patching/: __init__.py  api.py  common.py  index.py  patcher.py  source_find.py  source_runtime.py  targets.py  worker.py
majestic_linux/radio/: __init__.py  checks.py  doctor.py  log_analyzer.py  proton_gstreamer.py
majestic_linux/runtime/: __init__.py  assets.py  cleanup.py  debug_logs.py  (+15 more)
scripts/: check.sh
tests/: test_assets.py  test_async_detect.py  test_cleanup.py  test_config_file.py  test_discord_bridge.py  test_input_env.py  test_js_patcher.py  test_launcher_install.py  test_path_detect.py  test_platform_detect.py  test_proton_fixups.py  test_radio_analyzer.py  test_run_flow.py  test_tricks.py
