[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "majestic-linux-runner"
version = "0.1.0"
description = "Python orchestration runner for Majestic RP on Linux via Proton"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Majestic Linux Runner" }]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.14",
  "Topic :: Games/Entertainment",
]

[project.scripts]
majestic-linux = "majestic_linux.app.cli:main"

[tool.setuptools.packages.find]
include = ["majestic_linux*"]

[tool.unittest]
start-dir = "tests"
